--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -1,5 +1,6 @@
 <div class="row">
 <div class="row">
+  
   <%= form_for @article,:html => {:class => "form-horizontal center col-sm-8", multipart:true} do |f| %>
 
   <div class="form-group">
@@ -131,21 +132,15 @@
   </div>
 
   <div class="form-group">
-      <%= f.label :converavatars, "内页", class: "col-sm-2 control-label" %>
-      <div class="col-sm-8"><%= f.file_field :converavatars, name:"article_converavatars[]", multiple: true, class: "form-control" %></div>
+    <div class="dropzone ">
+    </div>
   </div>
 
+  
 
   <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10"><%= f.submit "提交", class:"btn btn-primary" %></div>
   </div>
-
-  <%= form_for(@upload, html: { multipart: true, class: "dropzone"}) do |f|  %>
-    <div class="fallback">
-      <%= f.file_field :image %><br>
-      <%= f.submit "提交" %>
-    </div>
-  <% end %>
 
   <% end %>
 
