--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -9,13 +9,13 @@
  * compiled file so the styles you add here take precedence over styles defined in any styles
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
- *
+ *= require wysihtml5n
  *= require_self
- *= require dropzone/basic
  *= require_tree .
  */
 
 //= require wysihtml5n
+//= require dropzone/basic
 
 @import "bootstrap-sprockets"
 @import "bootstrap"
