--- a/app/assets/stylesheets/articles.css.sass
+++ b/app/assets/stylesheets/articles.css.sass
@@ -2,8 +2,12 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+//= require wysihtml5n
+//= require dropzone/basic
+
 @import "bootstrap-sprockets"
 @import "bootstrap"
+@import "dropzone/basic"
 
 form.rails-bs-btn-danger
 	input[type=submit]
