--- a/app/views/articles/_form.html.erb
+++ b/app/views/articles/_form.html.erb
@@ -131,12 +131,25 @@
       <div class="col-sm-8"><%= f.text_area :old_text, size: "15x10", class: "form-control wysihtml5" %></div>
   </div>
 
+  <%= hidden_field :article, :converavatars, :"avatar-data" => @article.converuploads.to_json %>
   <div class="form-group">
-    <div class="dropzone ">
-    </div>
+    <div class="dropzone" hidden-field-name="article[converavatars]" test="yy"/>
   </div>
-
   
+  <%= hidden_field :article, :printedavatars, :"avatar-data" => @article.printeduploads.to_json %>
+  <div class="form-group">
+    <div class="dropzone" hidden-field-name="article[printedavatars]" test="yy"/>
+  </div>
+  
+  <%= hidden_field :article, :innerpageavatars, :"avatar-data" => @article.innerpageuploads.to_json %>
+  <div class="form-group">
+    <div class="dropzone" hidden-field-name="article[innerpageavatars]" test="yy"/>
+  </div>
+  
+  <%= hidden_field :article, :copyrightavatars, :"avatar-data" => @article.copyrightuploads.to_json %>
+  <div class="form-group">
+    <div class="dropzone" hidden-field-name="article[copyrightavatars]" test="yy"/>
+  </div>
 
   <div class="form-group">
       <div class="col-sm-offset-2 col-sm-10"><%= f.submit "提交", class:"btn btn-primary" %></div>
