add pic module.

--- a/app/assets/stylesheets/application.css.sass
+++ b/app/assets/stylesheets/application.css.sass
@@ -10,12 +10,10 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *= require wysihtml5n
+ *= require dropzone/basic
  *= require_self
  *= require_tree .
  */
-
-//= require wysihtml5n
-//= require dropzone/basic
 
 @import "bootstrap-sprockets"
 @import "bootstrap"
